# AndroidSerialPort

./: .gitignore
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/lzb/androidserialport/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: SerialPort.c  SerialPort.h
app/src/main/java/com/lzb/androidserialport/: MainActivity.java  MyApplication.java
app/src/main/java/com/lzb/androidserialport/serial/: SerialPort.java  SerialPortFinder.java
app/src/test/java/com/lzb/androidserialport/: ExampleUnitTest.java
